test/Fail/FunSort-X-SSet-PropOmega.err
FunSort-X-SSet-PropOmega.agda:6.13-18: error: [UnequalSorts]
Propω != funSort _3 SSet
when checking that the expression A → B has type Propω
